[package]
name = "affectively-cache-ops"
version = "1.0.0"
authors = ["AFFECTIVELY <opensource@affectively.ai>"]
edition = "2021"
license = "MIT"
description = "High-performance caching operations for WebAssembly - batch ops, compression, eviction, hashing"
repository = "https://github.com/affectively-ai/wasm-cache-ops"
keywords = ["wasm", "cache", "compression", "hashing", "lru"]
categories = ["caching", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
sha2 = "0.10"
flate2 = "1.0"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
